--- a/bike/nimbus.html
+++ b/bike/nimbus.html
@@ -29,18 +29,21 @@
 
     <div class="bike__grid bg-11">
       <div class="bikeGrid__content--right">
-        <section class="section  bikeHero">
+        <section class="section bikeHero">
           <div class="container">
             <div>
               <p class="font-m c-5 mb-05">R$ 2499</p>
               <h1 class="font-xll c-0 yellow-point bikeHero__title">Nimbus Stark</h1>
             </div>
+
             <div class="bikeHero__right">
               <p class="font-m c-5 mb-2 bikeHero__text">
                 A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.
               </p>
+
               <div class="flex-row bikeHero__action">
                 <a href="./" class="btn-primary bikeHero__button">Comprar agora</a>
+
                 <div class="flex-column bikeHero__tags">
                   <span class="flex-row font-ss c-6"><img src="../assets/images/icones/entrega.svg" alt="icone"> entrega em 5 dias</span>
                   <span class="flex-row font-ss c-6"><img src="../assets/images/icones/estoque.svg" alt="icone"> 18 em estoque</span>
@@ -50,9 +53,10 @@
           </div>
         </section>
 
-        <section class="container  bikeInfo">
-          <div class="mb-2">
+        <div class="container  bikeInfo">
+          <section class="mb-2">
             <h2 class="font-s c-0 mb-1 bikeInfo__title">Informações</h2>
+
             <ul class="c-8 bg-12 bikeInfo__list1">
               <li class="flex-column bikeInfo__item1">
                 <img src="../assets/images/icones/eletrica.svg" width="20px" height="20px" alt="icone">
@@ -75,9 +79,11 @@
                 <p class="font-ss c-5">Permite você viajar distâncias inimaginaveis com a sua bike.</p>
               </li>
             </ul>
-          </div>
-          <div class="bikeInfo__record">
+          </section>
+
+          <section>
             <h2 class="font-s c-0 mb-1 bikeInfo__title">Ficha técnica</h2>
+
             <ul class="font-ss c-5 bg-12 flex-column bikeInfo__list2">
               <li class="flex-row bikeInfo__item2">
                 <p class="">Peso</p>
@@ -104,17 +110,17 @@
                 <p class="">29</p>
               </li>
             </ul>
-          </div>
-        </section>
+          </section>
+        </div>
       </div>
 
-      <section class="section  bikeGrid__content--left">
+      <div class="section  bikeGrid__content--left">
         <div class="container bikeInfo__gallery">
           <div class="bikeInfo__frame"><img class="img" src="../assets/images/bicicletas/nimbus.jpg" alt=""></div>
           <div class="bikeInfo__frame"><img class="img" src="../assets/images/bicicletas/nimbus.jpg" alt=""></div>
           <div class="bikeInfo__frame"><img class="img" src="../assets/images/bicicletas/nimbus.jpg" alt=""></div>
         </div>
-      </section>
+      </div>
     </div>
 
     <section class="section catalog">
@@ -140,27 +146,13 @@
           </li>
 
           <li class="catalog__card">
-            <a href="../bike/nimbus.html">
-              <div class="catalogCard__frame mb-1"><img class="catalogCard__image" src="../assets/images/bicicletas/nimbus-home.jpg" alt="Bicicleta nimbus"></div>
-
-              <div class="catalogCard__title font-ll flex-row mb-05">
-
-                <h3 class="c-11">Nimbus</h3>
-
+            <a href="../bike/nebula.html">
+              <div class="catalogCard__frame mb-1">
+                <img class="catalogCard__image" src="../assets/images/bicicletas/nebula-home.jpg" alt="Bicicleta nimbus">
               </div>
 
-              <p class="font-m c-8">R$ 2499</p>
-            </a>
-          </li>
-
-          <li class="catalog__card">
-            <a href="../bike/nebula.html">
-              <div class="catalogCard__frame mb-1"><img class="catalogCard__image" src="../assets/images/bicicletas/nebula-home.jpg" alt="Bicicleta nimbus"></div>
-
               <div class="catalogCard__title font-ll flex-row mb-05">
-
                 <h3 class="c-11">Nebula</h3>
-
               </div>
 
               <p class="font-m c-8">R$ 2499</p>
@@ -173,6 +165,23 @@
 
     </section>
 
+    <section class="bg-11 bikeAction">
+      <div class="container bikeAction__grid">
+        <div class="bikeAction__right">
+          <h2 class="font-xll c-0 mb-2">
+            Pedale mais tranquilo com o nosso <span class="cp-1">seguro.</span>
+          </h2>
+          <p class="font-m c-5 mb-2">
+            Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.
+          </p>
+          <a href="" class="btn-primary">Conheça mais</a>
+        </div>
+
+        <div class="mb-3 bikeAction__frame">
+          <img class="img bikeAction__image" src="../assets/images/fotos/seguros.jpg" alt="perfil">
+        </div>
+      </div>
+    </section>
 
   </main>
 
