--- a/bike/nebula.html
+++ b/bike/nebula.html
@@ -17,8 +17,8 @@
         <a href="../index.html"><img class="navbar__logo" width="136" height="32" src="../assets/images/bikcraft.svg" alt="logo"></a>
 
         <ul class="navbar__list flex-row">
-          <li><a href="">Bicicletas</a></li>
-          <li><a href="">Seguros</a></li>
+          <li><a href="../products.html">Bicicletas</a></li>
+          <li><a href="../insurance.html">Seguros</a></li>
           <li><a href="">Contato</a></li>
         </ul>
       </div>
