--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul class="navbar__list flex-row">
           <li><a href="./products.html">Bicicletas</a></li>
           <li><a href="./insurance.html">Seguros</a></li>
-          <li><a href="">Contato</a></li>
+          <li><a href="./contact.html">Contato</a></li>
         </ul>
       </div>
     </nav>
