--- a/insurance.html
+++ b/insurance.html
@@ -20,7 +20,7 @@
         <ul class="navbar__list flex-row">
           <li><a href="./products.html">Bicicletas</a></li>
           <li><a href="./insurance.html">Seguros</a></li>
-          <li><a href="">Contato</a></li>
+          <li><a href="./contact.html">Contato</a></li>
         </ul>
       </div>
     </nav>
@@ -140,15 +140,33 @@
 
     <section class="section insuranceQuestions">
       <div class="container">
-        <h2 class="font-xll yellow-point">Perguntas frequentes</h2>
+        <h2 class="font-xll mb-2 yellow-point">Perguntas frequentes</h2>
 
         <ul class="insuranceQuestions__list">
-          <li>
-            <div>
-              <h3>Qual forma de pagamento vocês aceitam?</h3>
-              <img src="./assets/images/icones/seta-abrir.svg" alt="">
+          <li class="insuranceQuestions__item">
+            <div class="insuranceQuestions__header flex-row">
+              <h3 class="font-m-b">Qual forma de pagamento vocês aceitam?</h3>
+              <img class="insuranceQuestions__icon" width="20px" height="15px" src="./assets/images/icones/seta-abrir.svg" alt="">
             </div>
-            <p>
+            <p class="c-9 insuranceQuestions__text">
+              Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.
+            </p>
+          </li>
+          <li class="insuranceQuestions__item">
+            <div class="insuranceQuestions__header flex-row">
+              <h3 class="font-m-b">Qual forma de pagamento vocês aceitam?</h3>
+              <img class="insuranceQuestions__icon" width="20px" height="15px" src="./assets/images/icones/seta-abrir.svg" alt="">
+            </div>
+            <p class="c-9 insuranceQuestions__text">
+              Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.
+            </p>
+          </li>
+          <li class="insuranceQuestions__item">
+            <div class="insuranceQuestions__header flex-row">
+              <h3 class="font-m-b">Qual forma de pagamento vocês aceitam?</h3>
+              <img class="insuranceQuestions__icon" width="20px" height="15px" src="./assets/images/icones/seta-abrir.svg" alt="">
+            </div>
+            <p class="c-9 insuranceQuestions__text">
               Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.
             </p>
           </li>
@@ -205,3 +223,22 @@
 </body>
 
 </html>
+
+<script>
+  document.querySelectorAll('.insuranceQuestions__item').forEach((item) => {
+    const header = item.querySelector('.insuranceQuestions__header');
+    const content = item.querySelector('.insuranceQuestions__text');
+    const icon = header.querySelector('.insuranceQuestions__icon');
+
+    header.addEventListener('click', () => {
+      const isVisible = content.classList.contains('is-visible');
+
+      // Alterna visibilidade do conteúdo
+      content.classList.toggle('is-visible', !isVisible);
+
+      // Alterna classe de rotação do ícone
+      header.classList.toggle('active', !isVisible);
+    });
+  });
+
+</script>
