creating a contact page, and adding a session with information and a form.

--- a/contact.html
+++ b/contact.html
@@ -20,13 +20,84 @@
         <ul class="navbar__list flex-row">
           <li><a href="./products.html">Bicicletas</a></li>
           <li><a href="./insurance.html">Seguros</a></li>
-          <li><a href="">Contato</a></li>
+          <li><a href="./contact.html">Contato</a></li>
         </ul>
       </div>
     </nav>
+
+    <section class="section bg-11 ">
+      <div class="container heroProducts">
+
+        <p class="c-5 font-s  heroProducts__text">
+          respostas em até 24h
+        </p>
+
+        <h1 class="c-0 font-xll yellow-point">nosso contato</h1>
+      </div>
+    </section>
   </header>
 
   <main>
+    <section class="contact">
+
+      <div class="contact__container--top">
+        <div class="contact__info">
+          <div class="contactInfo__content">
+            <h2 class="font-l mb-2 c-0">Loja online</h2>
+            <address class="mb-2">
+              <div class="contact__adress">
+                <p class="font-m c-4 mb-1">Rua Ali Perto, 35</p>
+                <p class="font-m c-4 mb-1">Rio de Janeiro - RJ</p>
+                <p class="font-m c-4 ">Brasil - Terra - Via Láctea</p>
+              </div>
+            </address>
+            <div class="contact__email mb-2">
+              <p class="font-m c-0">vendas@bike.com</p>
+            </div>
+            <div class="contact__phone mb-2">
+              <p class="font-m c-0">(98) 98350-7939</p>
+            </div>
+            <div class="flex-row social__links">
+              <a href="./">
+                <img src="./assets/images/redes/facebook-p.svg" width="32" height="32" alt="Instagram">
+              </a>
+              <a href="./">
+                <img src="./assets/images/redes/instagram-p.svg" width="32" height="32" alt="Facebook">
+              </a>
+              <a href="./">
+                <img src="./assets/images/redes/youtube-p.svg" width="32" height="32" alt="Youtube">
+              </a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="contact__container--bottom bg-12">
+        <form action="" class="container section bg-12 contact__form">
+          <div class="form__row">
+            <div class="form__group">
+              <label for="name" class="form__label">Nome</label>
+              <input type="text" name="name" id="name" class="form__input">
+            </div>
+            <div class="form__group">
+              <label for="number" class="form__label">Número</label>
+              <input type="tel" name="number" id="number" class="form__input">
+            </div>
+          </div>
+          <div class="form__group">
+            <label for="email" class="form__label">Email</label>
+            <input type="email" name="email" id="email" class="form__input">
+          </div>
+          <div class="form__group">
+            <label for="message" class="form__label">Mensagem</label>
+            <textarea name="message" id="message" rows="10" class="form__textarea"></textarea>
+          </div>
+          <button class="btn-primary form__button">Enviar Mensagem</button>
+        </form>
+      </div>
+
+    </section>
 
   </main>
 
