Completion of contact page

--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
       </div>
 
       <div class="contact__container--bottom bg-12">
-        <form action="" class="container section bg-12 contact__form">
+        <form action="" class="section bg-12 contact__form">
           <div class="form__row">
             <div class="form__group">
               <label for="name" class="form__label">Nome</label>
@@ -99,6 +99,66 @@
 
     </section>
 
+    <section class="section bg-1 local">
+      <div class="container">
+        <h2 class="font-xll c-11 mb-2 yellow-point local__title ">Lojas locais</h2>
+
+        <ul class="localCard__list">
+          <li class="localCard__item">
+            <div class="localCard__frame">
+              <img class="img localCard__image" src="./assets/images/lojas/rj.jpg" alt="mapa do endereço">
+            </div>
+
+            <div class="localCard__bottom">
+              <h3 class="font-ll c-11 localCard__title mb-1">Rio De Janeiro</h3>
+
+              <address class="localCard__content mb-1">
+                <div class="localCard__adress">
+                  <p class="font-m c-8 mb-05 localCard__street">Rua Ali Perto, 25</p>
+                  <p class="font-m c-8 mb-05 localCard__city">Rio De Janeiro - RJ</p>
+                </div>
+
+                <div class="localCard__contact">
+                  <p class="font-m c-8 mb-05 localCard__email">vendas@bike.com</p>
+                  <p class="font-m c-8 mb-05 localCard__phone">(98) 98350-7939</p>
+                </div>
+              </address>
+
+              <div class="localCard__time">
+                <p class="font-m-b c-12">08-18h de seg à dom</p>
+              </div>
+            </div>
+          </li>
+
+          <li class="localCard__item">
+            <div class="localCard__frame">
+              <img class="img localCard__image" src="./assets/images/lojas/sp.jpg" alt="mapa do endereço">
+            </div>
+
+            <div class="localCard__bottom">
+              <h3 class="font-ll c-11 localCard__title mb-1">Rio De Janeiro</h3>
+
+              <address class="localCard__content mb-1">
+                <div class="localCard__adress">
+                  <p class="font-m c-8 mb-05 localCard__street">Rua Ali Perto, 25</p>
+                  <p class="font-m c-8 mb-05 localCard__city">Rio De Janeiro - RJ</p>
+                </div>
+
+                <div class="localCard__contact">
+                  <p class="font-m c-8 mb-05 localCard__email">vendas@bike.com</p>
+                  <p class="font-m c-8 mb-05 localCard__phone">(98) 98350-7939</p>
+                </div>
+              </address>
+
+              <div class="localCard__time">
+                <p class="font-m-b c-12">08-18h de seg à dom</p>
+              </div>
+            </div>
+          </li>
+        </ul>
+
+      </div>
+    </section>
   </main>
 
   <footer class="section bg-12">
