Finalizing the budget screen

--- a/bike/nebula.html
+++ b/bike/nebula.html
@@ -42,7 +42,7 @@
               </p>
 
               <div class="flex-row bikeHero__action">
-                <a href="../budget/nebula.html" class="btn-primary bikeHero__button">Comprar agora</a>
+                <a href="../budget/bike.html" class="btn-primary bikeHero__button">Comprar agora</a>
 
                 <div class="flex-column bikeHero__tags">
                   <span class="flex-row font-ss c-6"><img src="../assets/images/icones/entrega.svg" alt="icone"> entrega em 5 dias</span>
