--- a/contact.html
+++ b/contact.html
@@ -29,10 +29,10 @@
       <div class="container heroProducts">
 
         <p class="c-5 font-s  heroProducts__text">
-          respostas em até 24h
+          Respostas em até 24h
         </p>
 
-        <h1 class="c-0 font-xll yellow-point">nosso contato</h1>
+        <h1 class="c-0 font-xll yellow-point">Nosso contato</h1>
       </div>
     </section>
   </header>
