--- a/bike/magic.html
+++ b/bike/magic.html
@@ -33,7 +33,7 @@
           <div class="container">
             <div>
               <p class="font-m c-5 mb-05">R$ 2499</p>
-              <h1 class="font-xll c-0 yellow-point bikeHero__title">Nimbus Stark</h1>
+              <h1 class="font-xll c-0 yellow-point bikeHero__title">Magic Might</h1>
             </div>
 
             <div class="bikeHero__right">
@@ -42,7 +42,7 @@
               </p>
 
               <div class="flex-row bikeHero__action">
-                <a href="../budget/bike.html" class="btn-primary bikeHero__button">Comprar agora</a>
+                <a href="../budgets/bike.html" class="btn-primary bikeHero__button">Comprar agora</a>
 
                 <div class="flex-column bikeHero__tags">
                   <span class="flex-row font-ss c-6"><img src="../assets/images/icones/entrega.svg" alt="icone"> entrega em 5 dias</span>
@@ -116,9 +116,9 @@
 
       <div class="section  bikeGrid__content--left">
         <div class="container bikeInfo__gallery">
-          <div class="bikeInfo__frame"><img class="img" src="../assets/images/bicicletas/nimbus.jpg" alt=""></div>
-          <div class="bikeInfo__frame"><img class="img" src="../assets/images/bicicletas/nimbus.jpg" alt=""></div>
-          <div class="bikeInfo__frame"><img class="img" src="../assets/images/bicicletas/nimbus.jpg" alt=""></div>
+          <div class="bikeInfo__frame"><img class="img" src="../assets/images/bicicletas/magic.jpg" alt=""></div>
+          <div class="bikeInfo__frame"><img class="img" src="../assets/images/bicicletas/magic.jpg" alt=""></div>
+          <div class="bikeInfo__frame"><img class="img" src="../assets/images/bicicletas/magic.jpg" alt=""></div>
         </div>
       </div>
     </div>
@@ -219,10 +219,10 @@
 
         <nav>
           <ul>
-            <li class="font-m  mb-1"><a class="c-5" href="./bicicletas.html">Bicicletas</a></li>
-            <li class="font-m  mb-1"><a class="c-5" href="./seguros.html">Seguros</a></li>
-            <li class="font-m  mb-1"><a class="c-5" href="./contato.html">Contato</a></li>
-            <li class="font-m  mb-1"><a class="c-5" href="./termos.html">Termos e Condições</a></li>
+            <li class="font-m  mb-1"><a class="c-5" href="./products.html">Bicicletas</a></li>
+            <li class="font-m  mb-1"><a class="c-5" href="./insurance.html">Seguros</a></li>
+            <li class="font-m  mb-1"><a class="c-5" href="./contact.html">Contato</a></li>
+            <li class="font-m  mb-1"><a class="c-5" href="./terms.html">Termos e Condições</a></li>
           </ul>
         </nav>
       </div>
