--- a/bike/nimbus.html
+++ b/bike/nimbus.html
@@ -42,7 +42,7 @@
               </p>
 
               <div class="flex-row bikeHero__action">
-                <a href="../budget/bike.html" class="btn-primary bikeHero__button">Comprar agora</a>
+                <a href="../budgets/bike.html" class="btn-primary bikeHero__button">Comprar agora</a>
 
                 <div class="flex-column bikeHero__tags">
                   <span class="flex-row font-ss c-6"><img src="../assets/images/icones/entrega.svg" alt="icone"> entrega em 5 dias</span>
@@ -219,10 +219,10 @@
 
         <nav>
           <ul>
-            <li class="font-m  mb-1"><a class="c-5" href="./bicicletas.html">Bicicletas</a></li>
-            <li class="font-m  mb-1"><a class="c-5" href="./seguros.html">Seguros</a></li>
-            <li class="font-m  mb-1"><a class="c-5" href="./contato.html">Contato</a></li>
-            <li class="font-m  mb-1"><a class="c-5" href="./termos.html">Termos e Condições</a></li>
+            <li class="font-m  mb-1"><a class="c-5" href="./products.html">Bicicletas</a></li>
+            <li class="font-m  mb-1"><a class="c-5" href="./insurance.html">Seguros</a></li>
+            <li class="font-m  mb-1"><a class="c-5" href="./contact.html">Contato</a></li>
+            <li class="font-m  mb-1"><a class="c-5" href="./terms.html">Termos e Condições</a></li>
           </ul>
         </nav>
       </div>
