--- a/insurance.html
+++ b/insurance.html
@@ -209,10 +209,10 @@
 
         <nav>
           <ul>
-            <li class="font-m  mb-1"><a class="c-5" href="./bicicletas.html">Bicicletas</a></li>
-            <li class="font-m  mb-1"><a class="c-5" href="./seguros.html">Seguros</a></li>
-            <li class="font-m  mb-1"><a class="c-5" href="./contato.html">Contato</a></li>
-            <li class="font-m  mb-1"><a class="c-5" href="./termos.html">Termos e Condições</a></li>
+            <li class="font-m  mb-1"><a class="c-5" href="./products.html">Bicicletas</a></li>
+            <li class="font-m  mb-1"><a class="c-5" href="./insurance.html">Seguros</a></li>
+            <li class="font-m  mb-1"><a class="c-5" href="./contact.html">Contato</a></li>
+            <li class="font-m  mb-1"><a class="c-5" href="./terms.html">Termos e Condições</a></li>
           </ul>
         </nav>
       </div>
